Ported whitespace fix to Joomla 1.5 branch

--- a/style.css
+++ b/style.css
@@ -42,12 +42,27 @@
 	float:left;
 }
 
+.itp-sb-left img{
+	border:0 !important;
+	margin-right: 5px;
+}
+
 .itp-sb-right{
     float:right;
+}
+
+.itp-sb-right img{
+    border:0 !important;
+    margin-left: 5px;
 }
 
 .itp-sb-center{
     margin-left: auto;
     margin-right: auto;
     text-align:center !important;
+}
+
+.itp-sb-center img{
+    border:0 !important;
+    margin-left: 5px;
 }
